load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:http-server/package_json.bzl", http_server_bin = "bin")
load("@rules_elm//elm:defs.bzl", "elm_binary", "elm_library")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "assets",
    srcs = [
        "index.html",
        "style.css",
    ],
)

elm_library(
    name = "lib",
    srcs = ["src/App.elm"],
    strip_import_prefix = "src",
    deps = [],
)

elm_binary(
    name = "bin",
    main = "src/Main.elm",
    deps = [
        ":lib",
        "@elm_package_elm_browser",
    ],
)

http_server_bin.http_server_binary(
    name = "http_server",
)

js_run_devserver(
    name = "dev_server",
    args = ["."],
    data = [
        ":assets",
        ":bin",
    ],
    tool = ":http_server",
)
