load("@aspect_rules_js//js:defs.bzl", "js_binary")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

js_binary(
    name = "bin",
    entry_point = "main.js",
    data = ["//tools/npm:node_modules/elm-test"],
    visibility = ["//visibility:public"],
)
