load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_elm//elm:defs.bzl", "elm_test")
load("@rules_elm//proto:defs.bzl", "INCOMPATIBLE_ENABLE_PROTO_TOOLCHAIN_RESOLUTION", "elm_proto_library")
load("//nix-toolchains:proto_deps.bzl", "elm_proto_deps")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    deps = [
        "//:book_proto",
        "@protobuf//:any_proto",
        "@protobuf//:timestamp_proto",
    ],
)

elm_proto_library(
    name = "elm_foo_proto",
    # for bazel6 compatibility
    plugin_opt_json = "" if INCOMPATIBLE_ENABLE_PROTO_TOOLCHAIN_RESOLUTION else "json=decode",
    proto = ":foo_proto",
    deps = [] if INCOMPATIBLE_ENABLE_PROTO_TOOLCHAIN_RESOLUTION else elm_proto_deps,
)

elm_test(
    name = "spec",
    main = "Spec.elm",
    deps = [
        ":elm_foo_proto",
        "@elm_package_elm_test",
    ],
)
