load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_elm//elm:defs.bzl", "elm_test")
load("@rules_elm//proto:defs.bzl", "elm_proto_library")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    deps = [
        "//:book_proto",
        "@protobuf//:any_proto",
        "@protobuf//:timestamp_proto",
    ],
)

elm_proto_library(
    name = "elm_foo_proto",
    proto = ":foo_proto",
)

elm_test(
    name = "spec",
    main = "Spec.elm",
    deps = [
        ":elm_foo_proto",
        "@elm_package_elm_test",
    ],
)
