load("@com_google_protobuf//bazel/private:toolchain_helpers.bzl", "toolchains")
load("@com_google_protobuf//bazel/toolchains:proto_toolchain.bzl", "proto_toolchain")
load("@rules_elm//proto:defs.bzl", "ELM_PROTO_TOOLCHAIN")
load("@rules_elm//proto:elm_proto_toolchain_rule.bzl", "elm_proto_toolchain")
load("@rules_nodejs//nodejs:toolchain.bzl", "nodejs_toolchain")
load("@rules_python//python:py_runtime.bzl", "py_runtime")
load("@rules_python//python:py_runtime_pair.bzl", "py_runtime_pair")
load(":proto_deps.bzl", "elm_proto_deps")

config_setting(
    name = "x86_64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ]
)

config_setting(
    name = "x86_64-darwin",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ]
)

config_setting(
    name = "aarch64-darwin",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ]
)

alias(
    name = "proto_compiler",
    actual = select({
        "x86_64-linux": "@protobuf_x86_64-linux//:bin/protoc",
        "x86_64-darwin": "@protobuf_x86_64-darwin//:bin/protoc",
        "aarch64-darwin": "@protobuf_aarch64-darwin//:bin/protoc",
    }),
)

nodejs_toolchain(
    name = "node_toolchain",
    node = "@nixpkgs_nodejs//:bin/node",
    npm = "@nixpkgs_nodejs//:bin/npm",
)

toolchain(
    name = "nixpkgs_nodejs_toolchain",
    exec_compatible_with = ["@rules_nixpkgs_core//constraints:support_nix"],
    toolchain = ":node_toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

proto_toolchain(
    name = "nixpkgs_protoc_toolchain",
    proto_compiler = ":proto_compiler",
)

elm_proto_toolchain(
    name = "elm_proto_toolchain_opt_json",
    proto_compiler = ":proto_compiler",
    protoc_opts = [
        "--elm_opt=json=decode",
    ],
    deps = elm_proto_deps,
)

toolchain(
    name = "nixpkgs_elm_protobuf_toolchain",
    exec_compatible_with = ["@rules_nixpkgs_core//constraints:support_nix"],
    toolchain = ":elm_proto_toolchain_opt_json",
    toolchain_type = ELM_PROTO_TOOLCHAIN,
)

py_runtime(
    name = "my_py3_runtime",
    interpreter = "@nixpkgs_python3//:bin/python",
    python_version = "PY3",
)

py_runtime_pair(
    name = "my_py_runtime_pair",
    py3_runtime = ":my_py3_runtime",
)

toolchain(
    name = "nixpkgs_python_toolchain",
    exec_compatible_with = [
        "@rules_nixpkgs_core//constraints:support_nix",
    ],
    toolchain = ":my_py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)

