load("@protobuf//bazel/private:toolchain_helpers.bzl", "toolchains")
load("@rules_elm//proto:defs.bzl", "ELM_PROTO_TOOLCHAIN")
load("@rules_elm//proto:elm_proto_toolchain_rule.bzl", "elm_proto_toolchain")
load("@rules_nodejs//nodejs:toolchain.bzl", "nodejs_toolchain")
load("@rules_python//python:py_runtime.bzl", "py_runtime")
load("@rules_python//python:py_runtime_pair.bzl", "py_runtime_pair")

nodejs_toolchain(
    name = "node_toolchain",
    node = "@nixpkgs_nodejs//:bin/node",
    npm = "@nixpkgs_nodejs//:bin/npm",
)

toolchain(
    name = "nixpkgs_nodejs_toolchain",
    exec_compatible_with = ["@rules_nixpkgs_core//constraints:support_nix"],
    toolchain = ":node_toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

elm_proto_toolchain(
    name = "elm_proto_toolchain_opt_json",
    protoc_opts = [
        "--elm_opt=json=decode",
    ],
    deps = [
        "@elm_package_eriktim_elm_protocol_buffers",
        "@elm_package_anmolitor_elm_protoc_types",
        "@elm_package_danfishgold_base64_bytes",
        "@elm_package_elm_file",
        "@elm_package_elm_http",
        "@elm_package_elm_parser",
        "@elm_package_anmolitor_elm_protoc_utils",
        "@elm_package_rtfeldman_elm_iso8601_date_strings",
    ],
)

toolchain(
    name = "nixpkgs_elm_protobuf_toolchain",
    toolchain = ":elm_proto_toolchain_opt_json",
    toolchain_type = ELM_PROTO_TOOLCHAIN,
)

py_runtime(
    name = "my_py3_runtime",
    interpreter = "@nixpkgs_python3//:bin/python",
    python_version = "PY3",
)

py_runtime_pair(
    name = "my_py_runtime_pair",
    py3_runtime = ":my_py3_runtime",
)

toolchain(
    name = "nixpkgs_python_toolchain",
    exec_compatible_with = [
        "@rules_nixpkgs_core//constraints:support_nix",
    ],
    toolchain = ":my_py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)
