load("@rules_elm//proto:defs.bzl", "ELM_PROTO_TOOLCHAIN")
load("@rules_elm//proto:elm_proto_toolchain_rule.bzl", "elm_proto_toolchain")

elm_proto_toolchain(
    name = "elm_proto_toolchain_opt_json",
    protoc_opts = [
        "--elm_opt=json=decode",
    ],
    deps = [
        "@elm_package_eriktim_elm_protocol_buffers",
        "@elm_package_anmolitor_elm_protoc_types",
        "@elm_package_danfishgold_base64_bytes",
        "@elm_package_elm_file",
        "@elm_package_elm_http",
        "@elm_package_elm_parser",
        "@elm_package_anmolitor_elm_protoc_utils",
        "@elm_package_rtfeldman_elm_iso8601_date_strings",
    ],
)

toolchain(
    name = "nixpkgs_elm_protobuf_toolchain",
    toolchain = ":elm_proto_toolchain_opt_json",
    toolchain_type = ELM_PROTO_TOOLCHAIN,
)
